fix: increase media query sizing on smaller devices

--- a/main.css
+++ b/main.css
@@ -189,13 +189,13 @@ body {
 
 @media only screen and (max-width: 600px) {
   html {
-    font-size: 7.5px;
+    font-size: 8px;
   }
 }
 
 @media only screen and (min-width: 600px) {
   html {
-    font-size: 8px;
+    font-size: 8.5px;
   }
 }
 
